--- a/lib/trivia_web/live/default_live/index.html.heex
+++ b/lib/trivia_web/live/default_live/index.html.heex
@@ -68,7 +68,7 @@
   </div>
 
   <.modal :if={@live_action in [:new, :edit]} id="arena-modal" show on_cancel={JS.patch(~p"/")}>
-    <.live_component module={TriviaWeb.ArenaLive.FormComponent} id={@arena.id || :new} title={@page_title}
+    <.live_component module={TriviaWeb.DefaultLive.FormComponent} id={@arena.id || :new} title={@page_title}
       arena_theme={@arena_themes} action={@live_action} arena={@arena} patch={~p"/"} currentUser={@currentUser} />
   </.modal>
 </div>
